# spec-anchor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFF.md  README.md  pyproject.toml  メモ
.spec-anchor/: config.toml
.spec-grag/: .gitignore  README.md  config.smoke.toml  config.toml
BAK/: .envrc
agent_doc/: CLAUDE_SUBAGENT_DELEGATION_GUIDE.ja.md  CODEX_DELEGATION_GUIDE.ja.md  EXTERNAL_DESIGN_RULES.ja.md  外部設計書リライト.md
archive/full-grag-2026-05-05/root/: README.md  pyproject.toml
archive/full-grag-2026-05-05/root/.codex-current-session/: logs_2.sqlite  state_5.sqlite
archive/full-grag-2026-05-05/root/.codex-current-session-latest/: logs_2.sqlite  logs_2.sqlite-shm  state_5.sqlite
archive/full-grag-2026-05-05/root/.spec-grag/: config.toml
archive/full-grag-2026-05-05/root/docs/core/: concept.md  purpose.md
archive/full-grag-2026-05-05/root/scripts/: performance_smoke.py  setup_project.py  setup_system.py
archive/full-grag-2026-05-05/root/spec_grag/: cli.py  concept_index.py  conflict_review.py  embedding.py  graph_ops.py  io.py  manifest.py  project_setup.py  retrieval.py  retrieval_index.py  run_artifacts.py  slash.py  timing.py  watch_state.py  watcher.py
archive/full-grag-2026-05-05/root/spike/: 04_cli_subprocess.py
archive/full-grag-2026-05-05/root/templates/.codex/commands/: spec-core.md  spec-inject.md  spec-realign.md
archive/full-grag-2026-05-05/root/tests/: conftest.py  test_concept_diff.py  test_concept_index.py  test_core_e2e.py  test_core_extraction.py  test_embedding_reuse.py  test_phase10_readiness.py  test_phase6_operations.py  test_phase9_production_policy.py  test_protocol.py  test_realign_answer.py
archive/full-grag-2026-05-05/root/tests/fixtures/cli/: spec-core.request.json
doc/: AUDIT_TODO.ja.md  CALIBRATION_MODEL_EFFORT.ja.md  CLAUDE_NOTES.md  DESIGN.draft.ja.md  DESIGN.ja.md  DESIGN.md  DESIGN_old.md  EXTERNAL_DESIGN.ja.md  EXTERNAL_SPEC_DRAFT.ja.md  GRAG_FOUNDATION_RAW.md  HANDOFF.ja.md  HANDOFF_CODEX_AGENT_TEMPLATE_FORMATS.ja.md  IMPLEMENTATION_PLAN.ja.md  INTERNAL_DESIGN_RULES.ja.md  PHASE11_REPORT.ja.md  PHASE12_REPORT.ja.md  PHASE14_REPORT.ja.md  PHASE15_PLAN.ja.md  PHASE15_REPORT.ja.md  PHASE1_REPORT.ja.md  PHASE2_REPORT.ja.md  PHASE3_REPORT.ja.md  PHASE4_REPORT.ja.md  PHASE6_REPORT.ja.md  PHASE7_REPORT.ja.md  PHASE8_REPORT.ja.md  README素材.md  RUNBOOK.ja.md  SPEC_CLAIM_CONFLICT_CANDIDATE_DESIGN.ja.md  STORAGE_REDESIGN.ja.md  TEST_SPEC.ja.md  TODO.ja.md  TODO.md  TODO_template.ja.md  WRITING_RULES.ja.md
scripts/: ci-smoke.sh  real_docs_smoke.py  setup_project.py  spec-grag-slash.py
spec_anchor/: __init__.py  __main__.py  artifacts.py  chapter_anchors.py  claim_retrieval.py  cli.py  config.py  conflict_candidates.py  conflict_review.py  core.py  core_lock.py  core_progress.py  errors.py  freshness.py  inject.py  llm_provider.py  project_setup.py  realign.py  related_sections.py  related_typing_cache.py  retrieval_index.py  section_metadata.py  section_pair_candidates.py  section_parser.py  section_payload.py  setup.py  spec_claims.py  watcher.py
spec_grag/: __init__.py  __main__.py  artifacts.py  chapter_anchors.py  chunk_index.py  cli.py  concept_diff.py  concept_index.py  config.py  conflict_review.py  core.py  core_extraction.py  core_lock.py  core_progress.py  embedding.py  errors.py  extraction.py  freshness.py  graph_ops.py  inject.py  injection.py  llm_adapters.py  llm_factory.py  llm_provider.py  logging_config.py  manifest.py  project_setup.py  protocol.py  readiness.py  realign.py  related_sections.py  retrieval_index.py  run_artifacts.py  section_metadata.py  section_parser.py  section_payload.py  setup.py  sidecars.py  slash.py  template_resources.py  (+2 more)
spike/: 00_smoke_ollama_embedding.py  01_property_graph_basic.py  02_property_graph_index.py  03_retriever_and_transient.py
src/: config.rs  excitation.rs  main.rs
tests/: conftest.py  test_agent_cli_smoke.py  test_chapter_anchors.py  test_chunk_level_disabled.py  test_claim_retrieval.py  test_cli.py  test_cli_fixtures.py  test_cli_signal.py  test_concept_diff.py  test_concept_index.py  test_config_keys_acceptance.py  test_config_loader.py  test_config_misc.py  test_conflict_candidates.py  test_conflict_review.py  test_context_artifacts.py  test_core_e2e.py  test_core_extraction.py  test_core_lock.py  test_core_progress.py  test_degraded_fold.py  test_dismiss_conflict.py  test_dismiss_staleness.py  test_embedding_reuse.py  test_external_contract_e2e.py  test_extraction.py  test_freshness.py  test_graph_ops.py  test_inject_cli_extension.py  test_injection_realign.py  test_llm_adapters.py  test_llm_provider.py  test_manifest.py  test_model_effort_calibration.py  test_phase10_readiness.py  test_phase11_timings.py  test_phase12_hardening.py  test_phase6_operations.py  test_phase7_packaging.py  test_phase8_hybrid_retrieval.py  (+27 more)
(+1637 files in other folders)
