[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-grag"
version = "0.1.0"
description = "Lightweight specification context tooling for Agent and LLM workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "SPEC-grag contributors" }
]
dependencies = [
  "markdown-it-py>=3,<5",
  "python-dotenv>=1,<2",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
retrieval = [
  "FlagEmbedding>=1.3.0,<2",
  "qdrant-client>=1.11.0,<2",
]

[project.scripts]
spec-grag = "spec_grag.cli:main"
spec-grag-slash = "spec_grag.cli:slash_main"
spec-grag-watch = "spec_grag.cli:watch_main"
spec-grag-setup-project = "spec_grag.cli:setup_project_main"
spec-grag-setup-system = "spec_grag.cli:setup_system_main"

[tool.setuptools]
packages = ["spec_grag"]
include-package-data = true

[tool.setuptools.package-data]
spec_grag = [
  "templates/.codex/skills/spec-grag/*.md",
  "templates/.claude/commands/*.md",
  "templates/.spec-grag/config.toml",
  "templates/.spec-grag/.gitignore",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "external: test requires external dependencies such as Agent CLI, Qdrant, FlagEmbedding BGE-M3, or native service readiness checks",
]
