[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-anchor"
version = "0.1.0"
description = "Lightweight specification context tooling for Agent and LLM workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "SPEC-anchor contributors" }
]
dependencies = [
  "markdown-it-py>=3,<5",
  "python-dotenv>=1,<2",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
retrieval = [
  "FlagEmbedding>=1.3.0,<2",
  "qdrant-client>=1.11.0,<2",
]

[project.scripts]
spec-anchor = "spec_anchor.cli:main"
spec-anchor-slash = "spec_anchor.cli:slash_main"
spec-anchor-watch = "spec_anchor.cli:watch_main"
spec-anchor-setup-project = "spec_anchor.cli:setup_project_main"
spec-anchor-setup-system = "spec_anchor.cli:setup_system_main"

[tool.setuptools]
packages = ["spec_anchor"]
include-package-data = true

[tool.setuptools.package-data]
spec_anchor = [
  "templates/.codex/skills/spec-anchor/*.md",
  "templates/.claude/commands/*.md",
  "templates/.spec-anchor/config.toml",
  "templates/.spec-anchor/.gitignore",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "external: test requires external dependencies such as Agent CLI, Qdrant, FlagEmbedding BGE-M3, or native service readiness checks",
]
